# CPFPackageConsumerTestProject

./: .gitignore  .gitmodules  README.md
Sources/: CMakeLists.txt  cpfOwnedPackages.cmake  packages.cmake
Sources/MyLibConsumer/: CMakeLists.txt  a.cpp  main.cpp
